# web-framework-benchmarks

./: .gitignore  README.md  docker_results.txt  package-lock.json  package.json  readme.md  results.txt  run.js  run.sh  todo.md
.devcontainer/: Dockerfile  devcontainer.json
go_src/benchmark/: server.go
netcore5_src/benchmark/: AppDb.cs  Program.cs  Startup.cs  benchmark.csproj
netcore5_src/benchmark/Controllers/: BenchmarkController.cs
netcore5_src/benchmark/Properties/: launchSettings.json
rust_src/benchmark/src/: main.rs
src/drogon/: build.sh  run.sh  setup.sh  version.json
src/drogon/benchmark/: CMakeLists.txt  main.cc
src/drogon/benchmark/controllers/: MainCtrl.cc  MainCtrl.h  TestCtrl.cc  TestCtrl.h
src/go/: build.sh  go.mod  go.sum  results.txt  server.go  server.go.old
src/javascript/justjs/benchmark/: readme.md
src/javascript/justjs/benchmark/src/app/: server.js
src/javascript/node-vanilla/: results.txt
src/justjs/: readme.md
src/justjs/benchmark/: build.js  package-lock.json  package.json
src/justjs/benchmark/src/app/: router.js
src/justjs/benchmark/src/lib/: application.js.bak  middleware.js  response.js
src/justjs/just-lib/modules/: build.sh
src/netcore5/: User.cs
src/rust/actix-web/: Cargo.toml  results.txt  run.sh
src/rust/actix-web/src/: main.rs
src/rust/hyper/: Cargo.toml  results.txt
src/rust/hyper/src/: handler.rs  main.rs  main.rs.bak  main.rs.bak2  router.rs
src/rust/may-minihttp/: Cargo.toml
src/rust/may-minihttp/src/: main.rs
src/rust/std/: Cargo.toml  results.txt  run.sh
src/rust/std/src/: main.rs
(+13 files in other folders)
