[package]
name = "benchmark"
version = "0.1.0"
authors = ["Ryan Weiss <rw3iss@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.3"
actix-session = "0.4"
actix-utils = "2"
env_logger = "0.7"
serde = { version = "1.0.101", features = ["derive"] }